# axum-websocket

./: Cargo.toml  README.md
public/: index.html  websocket.html
src/: handlers.rs  main.rs  websocket.rs
