[package]
name = "axum-websocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }